// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/actions/ActionStatutBadge Barre 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey-6 bg-white border border-grey-5 line-through"
  data-test="ActionStatutBadge"
>
  Non renseigné
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Detaille 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-primary bg-primary-2"
  data-test="ActionStatutBadge"
>
  Détaillé
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Fait 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-success-1 bg-success-2"
  data-test="ActionStatutBadge"
>
  Fait
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Non Concerne 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey-6 bg-grey-3"
  data-test="ActionStatutBadge"
>
  Non concerné
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Non Renseigne 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey-6 bg-white border border-grey-5"
  data-test="ActionStatutBadge"
>
  Non renseigné
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Pas Fait 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-error-1 bg-error-2"
  data-test="ActionStatutBadge"
>
  Pas fait
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Programme 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-info-1 bg-info-2"
  data-test="ActionStatutBadge"
>
  Programmé
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Small 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey-6 bg-white border border-grey-5 !text-xs !px-1"
  data-test="ActionStatutBadge"
>
  Non renseigné
</span>
`;
